<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6F0FE">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B6F0FE"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_1"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/main_button_5" />

        <Button
            android:id="@+id/main_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_2"
            app:layout_constraintEnd_toEndOf="@+id/main_button_1"
            app:layout_constraintTop_toBottomOf="@+id/main_button_1" />

        <Button
            android:id="@+id/main_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_3"
            app:layout_constraintEnd_toEndOf="@+id/main_button_2"
            app:layout_constraintTop_toBottomOf="@+id/main_button_2" />

        <Button
            android:id="@+id/main_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_4"
            app:layout_constraintEnd_toEndOf="@+id/main_button_3"
            app:layout_constraintTop_toBottomOf="@+id/main_button_3" />

        <Button
            android:id="@+id/main_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_5"
            app:layout_constraintEnd_toStartOf="@+id/main_button_10"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toEndOf="@+id/main_button_1"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/main_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_6"
            app:layout_constraintStart_toStartOf="@+id/main_button_5"
            app:layout_constraintTop_toBottomOf="@+id/main_button_5" />

        <Button
            android:id="@+id/main_button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_7"
            app:layout_constraintStart_toStartOf="@+id/main_button_6"
            app:layout_constraintTop_toBottomOf="@+id/main_button_6" />

        <Button
            android:id="@+id/main_button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_8"
            app:layout_constraintStart_toStartOf="@+id/main_button_7"
            app:layout_constraintTop_toBottomOf="@+id/main_button_7" />

        <Button
            android:id="@+id/main_button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_9"
            app:layout_constraintStart_toStartOf="@+id/main_button_8"
            app:layout_constraintTop_toBottomOf="@+id/main_button_8" />

        <Button
            android:id="@+id/main_button_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_10"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/main_button_5" />

        <Button
            android:id="@+id/main_button_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_11"
            app:layout_constraintStart_toStartOf="@+id/main_button_10"
            app:layout_constraintTop_toBottomOf="@+id/main_button_10" />

        <Button
            android:id="@+id/main_button_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_12"
            app:layout_constraintStart_toStartOf="@+id/main_button_11"
            app:layout_constraintTop_toBottomOf="@+id/main_button_11" />

        <Button
            android:id="@+id/main_button_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#d3bc55"
            android:text="@string/main_button_13"
            app:layout_constraintStart_toStartOf="@+id/main_button_12"
            app:layout_constraintTop_toBottomOf="@+id/main_button_12" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="357dp"
            android:layout_height="335dp"
            android:layout_marginStart="147dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="147dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/aof_cover_art" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>