<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EighthArticleActivity">

    <com.github.barteksc.pdfviewer.PDFView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/article_10_display" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_play_arrow_black_18dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_10_display"
        tools:outlineProvider="paddedBounds">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/end_time"
            app:layout_constraintStart_toEndOf="@id/start_time" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/start_time"
            app:layout_constraintStart_toStartOf="@id/reset"
            app:layout_constraintTop_toTopOf="@id/seekBar"/>

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/end_time"
            app:layout_constraintTop_toTopOf="@id/seekBar"
            app:layout_constraintRight_toRightOf="@id/toggleSwitch"/>

        <ImageButton
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/rewind"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:src="@drawable/baseline_skip_previous_black_18dp"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toTopOf="@+id/rewind" />

        <ImageButton
            android:id="@+id/rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/play"
            app:layout_constraintTop_toTopOf="@+id/play"
            app:srcCompat="@drawable/baseline_replay_5_black_18dp" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/rewind"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_pause_black_18dp" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/rewind"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="@+id/play"
            app:srcCompat="@drawable/baseline_forward_5_black_18dp" />

        <Switch
            android:id="@+id/toggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:text="@string/lyrics_switch"
            app:layout_constraintBottom_toBottomOf="@+id/forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/forward" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>